--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@types/hammerjs": "2.0.36",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^8.2.0",
     "igniteui-angular-charts": "^8.0.0",
     "igniteui-angular-core": "^8.0.0",
+    "ngx-pagination": "^4.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
