--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
     "@angular/router": "~8.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.3",
     "@syncfusion/ej2-angular-calendars": "^18.1.42",
     "@syncfusion/ej2-ng-buttons": "^16.2.50",
     "@types/googlemaps": "^3.39.3",
@@ -39,6 +40,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
+    "ng-bootstrap": "^1.6.3",
     "ng-pick-datetime": "^7.0.0",
     "ngx-bootstrap": "^5.5.0",
     "ngx-pagination": "^4.1.0",
